Fix footer header and heading alignment

--- a/assets/stylesheets/styles.less
+++ b/assets/stylesheets/styles.less
@@ -73,8 +73,6 @@ footer {
 
   div {
     padding-top: 10px;
-    padding-left: 0px !important;
-    padding-right: 0px !important;
   }
 }
 
